Bug 488963 - "Assertion failure: cg->lexdeps.lookup(atom), at ../jsemit.cpp" (tachyonal r=mrbkap).